# Amnesia64

./: .gitignore  .gitmodules  Amnesia.sln  CMakeLists.txt
HPL2/: CMakeLists.txt
HPL2/core/: HPL2.vcxproj  HPL2.vcxproj.filters
HPL2/core/include/: hpl.h
HPL2/core/include/engine/: Engine.h  EngineInitVars.h  LowLevelEngineSetup.h
HPL2/core/include/generate/: VoxelMap.h
HPL2/core/include/graphics/: AnimatedImage.h  BindlessPool.h  DrawPacket.h  FrameSubImage.h  FrameTexture.h  Graphics.h  GraphicsTypes.h  HPLTexture.h  HybridRenderer.h  Image.h  IndexPool.h  LowLevelGraphics.h  MaterialType_BasicSolid.h  ObjectPool.h  RIBoostrap.h  RIBootstrap.h  RIConversion.h  RIDefines.h  RIDescriptorSetAllocator.h  RIFormat.h  RIGPUPreset.h  RIHandles.h  RINulTexture.h  RIPogoBuffer.h  RIProgram.h  RIRenderer.h  RIResourceUploader.h  RIScratchAlloc.h  RISegmentAlloc.h  RISwapchain.h  RITypes.h  RIVK.h  Renderer.h  RendererDeferred.h  RendererSimple.h  RendererWireFrame.h  VertexBuffer.h  VertexBuffer_RI.h  spirv.h  spirv_reflect.h
HPL2/core/include/gui/: Gui.h  GuiGfxElement.h  GuiSet.h  ImGuiHPL.h
HPL2/core/include/impl/: GLSLShader.h  LowLevelGraphicsSDL.h  LowLevelSoundOpenAL.h  SDLEngineSetup.h
HPL2/core/include/math/: Math.h  MathTypes.h  Matrix.h
HPL2/core/include/physics/: Flex.h  FlexHelper.h  Physics.h
HPL2/core/include/resources/: ImageManager.h  ResourceBase.h  Resources.h  SpvResourceLoader.h  TextureManager.h
HPL2/core/include/scene/: RenderableContainer.h  Scene.h  SceneTypes.h  SubMeshEntity.h  World.h
HPL2/core/include/sound/: LowLevelSound.h  Sound.h
HPL2/core/include/system/: Hasher.h  QStr.h  String.h  Types.h
HPL2/core/sources/engine/: Engine.cpp
HPL2/core/sources/generate/: VoxelMap.cpp
HPL2/core/sources/graphics/: BindlessPool.cpp  FrameBitmap.cpp  FrameSubImage.cpp  FrameTexture.cpp  Graphics.cpp  GraphicsTypes.cpp  HPLTexture.cpp  HybridRenderer.cpp  Image.cpp  IndexPool.cpp  MaterialType_BasicSolid.cpp  PostEffectComposite.cpp  PostEffect_Bloom.cpp  PostEffect_ColorConvTex.cpp  PostEffect_ImageTrail.cpp  RIBoostrap.cpp  RIBootstrap.cpp  RIDescriptorSetAllocator.cpp  RIFormat.c  RIHandle.cpp  RINulTexture.cpp  RIProgram.cpp  RIRenderer.cpp  RIResourceUploader.cpp  RIScratchAlloc.cpp  RISwapchain.cpp  RIVK.cpp  Renderer.cpp  RendererDeferred.cpp  RendererSimple.cpp  RendererWireFrame.cpp  spirv_reflect.c
HPL2/core/sources/gui/: Gui.cpp  GuiGfxElement.cpp  GuiPopUpColorPicker.cpp  GuiSet.cpp  ImGuiHPL.cpp
HPL2/core/sources/impl/: GLSLProgram.cpp  GLSLShader.cpp  LowLevelGraphicsSDL.cpp  LowLevelInputSDL.cpp  LowLevelResourcesSDL.cpp  LowLevelSoundOpenAL.cpp  PhysicsBodyNewton.cpp  PhysicsWorldNewton.cpp  PlatformUnix.cpp  SDLEngineSetup.cpp  SDLFontData.cpp  SDLTexture.cpp  VertexBuffer_RI.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
HPL2/core/sources/physics/: Flex.cpp  FlexHelper.cpp  Physics.cpp
HPL2/core/sources/resources/: ImageManager.cpp  Resources.cpp  TextureManager.cpp  WorldLoaderHplMap.cpp
HPL2/core/sources/scene/: BillBoard.cpp  Light.cpp  RenderableContainer_BoxTree.cpp  RenderableContainer_List.cpp  Scene.cpp  World.cpp
HPL2/core/sources/sound/: Sound.cpp
HPL2/core/sources/system/: QStr.cpp  String.cpp  System.cpp
HPL2/dependencies/include/Flex/core/: FlexMesh.cpp  FlexPlatform.cpp  FlexPlatform.h  aabbtree.cpp  voxelize.cpp
HPL2/dependencies/include/OpenAL/: OAL_Init.h
HPL2/dependencies/lib/yojimbo/Win32/Debug/: netcode.lib  reliable.lib  sodium-builtin.lib  tlsf.lib  yojimbo.lib
HPL2/dependencies/lib/yojimbo/Win32/Release/: netcode.lib  reliable.lib  sodium-builtin.lib  tlsf.lib  yojimbo.lib
HPL2/dependencies/lib/yojimbo/Win64/Debug/: netcode.lib  reliable.lib  sodium-builtin.lib  tlsf.lib  yojimbo.lib
HPL2/dependencies/lib/yojimbo/Win64/Release/: netcode.lib  reliable.lib  sodium-builtin.lib  tlsf.lib  yojimbo.lib
HPL2/dependencies/sources/Newton/: Newton.vcxproj
HPL2/dependencies/sources/OpenAL/: OAL_Device.cpp
HPL2/dependencies/sources/freealut/: freealut.vcxproj
HPL2/glsl/: gui.frag.glsl  gui.resource.glsl  gui.vert.glsl
HPL2/tools/editors/leveleditor/: LevelEditor.vcxproj
HPL2/tools/editors/materialeditor/: MaterialEditor.vcxproj
HPL2/tools/editors/modeleditor/: ModelEditor.vcxproj
HPL2/tools/editors/particleeditor/: ParticleEditor.vcxproj
HPL2/tools/luxserver/: LuxServer.cpp  LuxServer.vcxproj  LuxServer.vcxproj.filters  MapView.cpp
HPL2/tools/mapview/: MapView.cpp  MapView.vcxproj
HPL2/tools/modelview/: ModelView.vcxproj
amnesia/: CMakeLists.txt  copy_game_assets.cmake
amnesia/glsl/: bindless.resource.glsl  gui.frag  gui.resource.glsl  gui.vert  opaque.vert
amnesia/src/game/: Lux.vcxproj  LuxBase.cpp  LuxBase.h  LuxClient.cpp  LuxConfigHandler.cpp  LuxConfigHandler.h  LuxDebugHandler.cpp  LuxDebugHandler.h  LuxDemoEnd.cpp  LuxEffectRenderer.cpp  LuxEnemy.cpp  LuxEnemy.h  LuxEnemyMover.cpp  LuxEnemyMover.h  LuxHandObject_PhysGun.h  LuxHelpFuncs.cpp  LuxInputHandler.cpp  LuxInventory.cpp  LuxInventory.h  LuxItemType.cpp  LuxItemType.h  LuxJournal.cpp  LuxJournal.h  LuxMainMenu.cpp  LuxMainMenu.h  LuxMainMenu_CustomStory.cpp  LuxMainMenu_Options.cpp  LuxMainMenu_Options.h  LuxMap.cpp  LuxMap.h  LuxPlayer.cpp  LuxPlayer.h  LuxPlayerHands.cpp  LuxPlayerHands.h  LuxPlayerHelpers.cpp  LuxPlayerHelpers.h  LuxPlayerState.cpp  LuxPlayerState.h  LuxPlayerState_DefaultBase.cpp  LuxPlayerState_PhysGun.cpp  (+6 more)
amnesia/src/launcher/: launcherCz.fl
cmake/: shaders.cmake  utils.cmake
